fix scrollbar

--- a/globals.css
+++ b/globals.css
@@ -51,6 +51,7 @@ html,
 body {
   height: 100%;
   overflow: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -89,4 +90,3 @@ body {
 .prose li {
   margin-bottom: 0.25rem;
 }
-
